Making Caseys interpolation usable

--- a/InterpolationCode/DataInterpolation.ipynb
+++ b/InterpolationCode/DataInterpolation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "encouraging-multiple",
+   "id": "armed-thermal",
    "metadata": {},
    "source": [
     "# Imports\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "involved-particular",
+   "id": "overhead-flush",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "level-ballet",
+   "id": "sound-resolution",
    "metadata": {},
    "source": [
     "# File\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "miniature-handy",
+   "id": "rough-feeding",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "growing-dinner",
+   "id": "considered-output",
    "metadata": {},
    "source": [
     "# Filter for your pool\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "limiting-master",
+   "id": "secure-elements",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legislative-attraction",
+   "id": "legal-mortality",
    "metadata": {},
    "source": [
     "# Functions\n",
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "magnetic-baptist",
+   "id": "solved-comparison",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intellectual-community",
+   "id": "interesting-order",
    "metadata": {},
    "source": [
     "# Season by Season Interpolation\n",
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "nasty-wellington",
+   "id": "viral-chair",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supposed-terminal",
+   "id": "southern-graduation",
    "metadata": {},
    "source": [
     "# Prediction Group by Season and several years\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "complicated-feelings",
+   "id": "august-circular",
    "metadata": {},
    "outputs": [
     {
@@ -3332,7 +3332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reserved-drove",
+   "id": "prime-reliance",
    "metadata": {},
    "source": [
     "# Prediction group year by year\n",
@@ -3343,7 +3343,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "academic-light",
+   "id": "global-shame",
    "metadata": {},
    "outputs": [
     {
@@ -3390,7 +3390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "transparent-detector",
+   "id": "canadian-heavy",
    "metadata": {},
    "source": [
     "# Spacial interpolation by year, by season (Casey)"
@@ -3398,7 +3398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intelligent-boxing",
+   "id": "closing-anniversary",
    "metadata": {},
    "source": [
     "Load functions - parameter definitons and correct documentation still needs to be completed"
@@ -3407,7 +3407,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "explicit-fight",
+   "id": "small-machinery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3428,8 +3428,9 @@
     "# This class stores the latitude and longitude of a sample, and indicates \n",
     "# if this location has the desired variable we are estimating\n",
     "class Location:\n",
-    "    def __init__(self,latitude,longitude,hasv,ID,value):\n",
+    "    def __init__(self,latitude,longitude,hasv,ID,value,SHEET):\n",
     "        self.ID = ID\n",
+    "        self.SHEET = SHEET\n",
     "        self.latitude = latitude\n",
     "        self.longitude = longitude\n",
     "        self.hasv = hasv\n",
@@ -3469,7 +3470,7 @@
     "            hasv = False\n",
     "        else:\n",
     "            hasv = True\n",
-    "        locations.append(Location(row[\"LATITUDE\"],row[\"LONGITUDE\"],hasv,row[\"LOCATCD\"],row[variable]))\n",
+    "        locations.append(Location(row[\"LATITUDE\"],row[\"LONGITUDE\"],hasv,row[\"LOCATCD\"],row[variable],row[\"SHEETBAR\"]))\n",
     "        #indexes.append(index)\n",
     "        \n",
     "    matrix = pd.DataFrame(0,index=locations,columns=locations)\n",
@@ -3490,16 +3491,16 @@
     "    locations = DM.index\n",
     "    # loop through each location\n",
     "    for i,loc in enumerate(locations):\n",
-    "        ID = loc.ID\n",
-    "        row = dataframe.loc[dataframe[\"LOCATCD\"]==ID]\n",
+    "        SHEET = loc.SHEET\n",
+    "        row = dataframe.loc[dataframe[\"SHEETBAR\"]==SHEET]\n",
     "        #print(row)\n",
     "        #print(row.shape)\n",
     "        #print(row.loc[row.index[0],variable])\n",
     "        #print(type(row[variable]))\n",
     "        try:\n",
-    "            assert(row.shape[0]==1), \"Multiple rows with same LOCATCD\"\n",
+    "            assert(row.shape[0]==1), \"Multiple rows with same SHEETBAR\"\n",
     "        except AssertionError as msg:\n",
-    "            print(dataframe[dataframe[\"LOCATCD\"].duplicated(keep=False)])\n",
+    "            print(dataframe[dataframe[\"SHEETBAR\"].duplicated(keep=False)])\n",
     "            print(msg)\n",
     "            \n",
     "        # Pull value of desired variable\n",
@@ -3544,10 +3545,10 @@
     "            # The list of tuples that contain location id, the distance, and the value for variable\n",
     "            tuples = []\n",
     "            for i,dist in enumerate(closest):\n",
-    "                ID = closest.index[i].ID\n",
+    "                SHEET = closest.index[i].SHEET\n",
     "                val = closest.index[i].value\n",
     "                tuples.append((ID,dist,val))\n",
-    "            closestDict[loc.ID] = tuples\n",
+    "            closestDict[loc.SHEET] = tuples\n",
     "    return closestDict\n",
     "\n",
     "def predict(tuples,numclosest = 2):\n",
@@ -3666,7 +3667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "golden-extraction",
+   "id": "dated-corpus",
    "metadata": {},
    "source": [
     "#### Interpolating missing data"
@@ -3675,7 +3676,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "phantom-sentence",
+   "id": "included-aircraft",
    "metadata": {},
    "outputs": [
     {
@@ -4131,7 +4132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contemporary-equality",
+   "id": "civilian-judge",
    "metadata": {},
    "source": [
     "# Multivariate Regression"
@@ -4139,7 +4140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demographic-ordinance",
+   "id": "palestinian-cuisine",
    "metadata": {},
    "source": [
     "Filter for non missing data"
@@ -4148,7 +4149,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "interpreted-chinese",
+   "id": "satisfied-april",
    "metadata": {},
    "outputs": [
     {
@@ -4175,7 +4176,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "accepted-fisher",
+   "id": "racial-baseball",
    "metadata": {},
    "outputs": [
     {
