--- a/pools_specific_EDA/Open River/Open River KMapper.ipynb
+++ b/pools_specific_EDA/Open River/Open River KMapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "potential-sight",
+   "id": "governmental-calvin",
    "metadata": {},
    "source": [
     "### Imports"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "casual-history",
+   "execution_count": 9,
+   "id": "amazing-account",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,13 @@
     "from ipywidgets import interactive, HBox, VBox, widgets, interact\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pickle,json"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "valid-malawi",
+   "id": "mighty-abortion",
    "metadata": {},
    "source": [
     "### Functions"
@@ -44,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "dangerous-landing",
+   "execution_count": 2,
+   "id": "equal-arthur",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +110,12 @@
     "\n",
     "    X = X[nocond]\n",
     "    \n",
+    "    X.reset_index(drop=True,inplace = True)\n",
+    "    \n",
+    "    var_to_index = {nocond[i] : i for i in range(len(nocond))}\n",
+    "    projected_vars = nocond\n",
+    "    projected_var_indices = [var_to_index[var] for var in projected_vars]\n",
+    "    \n",
     "    print(\"X.shape: \",X.shape[0])\n",
     "    \n",
     "    if X.shape[0]<10:\n",
@@ -129,6 +136,9 @@
     "    lens = pca.fit_transform(X)\n",
     "    print(\"Variance explained: \",pca.explained_variance_ratio_)\n",
     "    \n",
+    "    # Project data onto the ones we want to display\n",
+    "    summary_variable = mapper.project(np.array(X),projection = projected_var_indices, scaler=None)\n",
+    "    \n",
     "    # Generate the simplicial complex\n",
     "    scomplex = mapper.map(lens, X, cover=km.Cover(n_cubes=N_CUBES, perc_overlap=PERC_OVERLAP), clusterer=cluster_alg,remove_duplicate_nodes=True)  \n",
     "\n",
@@ -147,9 +157,10 @@
     "\n",
     "    color_values = lens [:,0] - lens[:,0].min()\n",
     "    my_colorscale = pl_brewer\n",
+    "    color_function_name = \"Distance to x-min\"\n",
     "    kmgraph,  mapper_summary, colorf_distribution = get_mapper_graph(scomplex, \n",
     "                                                                     color_values,  \n",
-    "                                                                     color_function_name='Distance to x-min', \n",
+    "                                                                     color_function_name=color_function_name, \n",
     "                                                                     colorscale=my_colorscale)\n",
     "\n",
     "    bgcolor = 'rgba(10,10,10, 0.9)'\n",
@@ -182,13 +193,13 @@
     "    fw_graph.data[1].marker.colorbar.title = 'dist to<br>x-min'\n",
     "    html_output_path = directory_path + \"\\\\\" + title + 'PCA_1' + 'all_var_' + 'Eps_' + str(DBSCAN_EPSILON) +'MinS_' + str(DBSCAN_MIN_SAMPLES) + 'NCUBES_' + str(N_CUBES) + 'PEROvLp_' + str(PERC_OVERLAP) + '.html'\n",
     "    html_output_path = html_output_path.replace(\":\",\"_\")\n",
-    "    mapper.visualize(scomplex, path_html=html_output_path)\n",
-    "    return(scomplex)"
+    "    mapper.visualize(scomplex, path_html=html_output_path, color_values=color_values, color_function_name=color_function_name,lens=summary_variable,lens_names=projected_vars)\n",
+    "    return scomplex, X"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "brief-adelaide",
+   "id": "opening-brief",
    "metadata": {},
    "source": [
     "### Load data"
@@ -196,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "hybrid-shield",
+   "execution_count": 3,
+   "id": "immediate-module",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +415,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,8 +435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "coordinate-bumper",
+   "execution_count": 4,
+   "id": "biblical-prompt",
    "metadata": {},
    "outputs": [
     {
@@ -474,30 +485,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "governmental-roulette",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Stratum 1 SUMMER 93-00_'"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test = \"Stratum 1 SUMMER 93-00:\"\n",
-    "test.replace(\":\",\"_\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "id": "twenty-papua",
+   "execution_count": 5,
+   "id": "fabulous-recommendation",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "living-remedy",
+   "id": "communist-accident",
    "metadata": {},
    "outputs": [
     {
@@ -548,8 +537,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "religious-collapse",
+   "execution_count": 6,
+   "id": "floral-trunk",
    "metadata": {},
    "outputs": [
     {
@@ -587,8 +576,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "necessary-constant",
+   "execution_count": 7,
+   "id": "weekly-chapel",
    "metadata": {},
    "outputs": [
     {
@@ -782,18 +771,21 @@
     "n_cubes = [5, 10, 15]\n",
     "perc_overlap = [.35, .45, .55]\n",
     "\n",
-    "mapper_pca_output_dict = {}\n",
+    "mapper_output_dict = {}\n",
+    "mapper_output_df = {}\n",
     "for key in df_stratum_season_time_dict:\n",
     "    for j in n_cubes:\n",
     "        for k in perc_overlap:\n",
     "            newkey = key+\"ncubes_\"+str(j)+\"_overlap_\"+str(k)\n",
-    "            mapper_pca_output_dict[newkey] = mapper_pca_func(df_stratum_season_time_dict[key],key, N_CUBES = j, PERC_OVERLAP = k)"
+    "            scomplex, X = mapper_pca_func(df_stratum_season_time_dict[key],key, N_CUBES = j, PERC_OVERLAP = k)\n",
+    "            mapper_output_df[newkey] = X\n",
+    "            mapper_output_dict[newkey] = scomplex"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "sized-optics",
+   "id": "round-transsexual",
    "metadata": {},
    "outputs": [
     {
@@ -813,30 +805,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "white-inventory",
+   "id": "medieval-harris",
    "metadata": {},
    "source": [
-    "Saving all outputs to json"
+    "Saving all outputs to json save scomplices and data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "sixth-boating",
+   "id": "presidential-travel",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "\n",
-    "jsonFile = json.dumps(mapper_pca_output_dict)\n",
+    "jsonFile = json.dumps(mapper_output_dict)\n",
     "f = open(\"All_graphs.json\",\"w\")\n",
+    "pickle = pickle.dump(mapper_output_df,path)\n",
     "f.write(jsonFile)\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "comparative-prague",
+   "id": "split-prairie",
    "metadata": {},
    "source": [
     "Load mapper data"
@@ -845,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "sonic-duplicate",
+   "id": "another-effect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "stylish-probe",
+   "id": "clinical-newfoundland",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adapted-maple",
+   "id": "seasonal-short",
    "metadata": {},
    "source": [
     "Pick one output to analyze"
@@ -887,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "played-macro",
+   "id": "whole-heart",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laden-latex",
+   "id": "voluntary-treat",
    "metadata": {},
    "source": [
     "Function to return a nested list of connected components"
@@ -927,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "tender-platform",
+   "id": "clinical-rwanda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "raising-release",
+   "id": "dimensional-russia",
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "fitted-taxation",
+   "id": "norwegian-pasta",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "radical-judge",
+   "id": "smooth-radiation",
    "metadata": {},
    "outputs": [],
    "source": []
